// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toHydrationLoadersApplied with hydrated components should apply correct hydration loaders when hydrate is eager 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point data-s-id=\\"a925635dc2098a2f97fefc943747acf4\\">
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-id=\\"a925635dc2098a2f97fefc943747acf4\\">
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-id=\\"a925635dc2098a2f97fefc943747acf4\\">
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import Component from \\"/not-important.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"a925635dc2098a2f97fefc943747acf4\\",
      index: \\"0\\",
      Component,
      props: {},
    });
  </script>
<script type=\\"module\\">
    import Component from \\"/not-important.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"a925635dc2098a2f97fefc943747acf4\\",
      index: \\"1\\",
      Component,
      props: {},
    });
  </script>
<script type=\\"module\\">
    import Component from \\"/not-important.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"a925635dc2098a2f97fefc943747acf4\\",
      index: \\"2\\",
      Component,
      props: {},
    });
  </script>

</body>
</html>"
`;

exports[`toHydrationLoadersApplied with hydrated components should apply correct hydration loaders when hydrate is lazy 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point data-s-id=\\"84f4e836704c84f98fd223cb95457568\\">
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-id=\\"84f4e836704c84f98fd223cb95457568\\">
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-id=\\"84f4e836704c84f98fd223cb95457568\\">
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      id: \\"84f4e836704c84f98fd223cb95457568\\",
      index: \\"0\\",
      componentImporter: async () => await import(\\"/not-important.jsx\\"),
      props: {},
    });
  </script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      id: \\"84f4e836704c84f98fd223cb95457568\\",
      index: \\"1\\",
      componentImporter: async () => await import(\\"/not-important.jsx\\"),
      props: {},
    });
  </script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      id: \\"84f4e836704c84f98fd223cb95457568\\",
      index: \\"2\\",
      componentImporter: async () => await import(\\"/not-important.jsx\\"),
      props: {},
    });
  </script>

</body>
</html>"
`;

exports[`toHydrationLoadersApplied with hydrated components should apply correct props based on componentAttrStore 1`] = `
"<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
  <h1>My incredible site</h1>
  <slinkity-react-mount-point data-s-id=\\"f8763b721cb10c26424e1df9e0a421f8\\">
    <nav>
      <a href=\\"/home\\">Home</a>
      <a href=\\"/about\\">About</a>
      <a href=\\"/contact\\">Contact</a>
    </nav>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-id=\\"0943ccd20d930e319d5948276499f5c8\\">
    <h2>Welcome to the site</h2>
  </slinkity-react-mount-point>
  <slinkity-react-mount-point data-s-id=\\"e1f1cabd02a6d52baf64df3404fb10fc\\">
    <ul id=\\"list\\"><li>Have a nice day world</li></ul>
  </slinkity-react-mount-point>

<script type=\\"module\\">
  import MountPoint from \\"slinkity/lib/plugin/reactPlugin/_client/_mount-point.js\\";
  window.customElements.define(\\"slinkity-react-mount-point\\", MountPoint);
</script>
<script type=\\"module\\">
    import Component from \\"/nav.jsx\\";
    import eagerLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_eager-loader.js\\";
  
    eagerLoader({ 
      id: \\"f8763b721cb10c26424e1df9e0a421f8\\",
      index: \\"0\\",
      Component,
      props: {firstProp:'nice',secondProp:42,thirdProp:false,helper() {
  return 'Testing non-JSON properties';
}},
    });
  </script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      id: \\"0943ccd20d930e319d5948276499f5c8\\",
      index: \\"0\\",
      componentImporter: async () => await import(\\"/nested/Heading.jsx\\"),
      props: {text:{weight:'bold',content:'Welcome to the site'}},
    });
  </script>
<script type=\\"module\\">
    import lazyLoader from \\"slinkity/lib/plugin/reactPlugin/_client/_lazy-loader.js\\";
  
    lazyLoader({ 
      id: \\"e1f1cabd02a6d52baf64df3404fb10fc\\",
      index: \\"0\\",
      componentImporter: async () => await import(\\"/index.jsx\\"),
      props: {list:['Have a nice day world']},
    });
  </script></body>
</html>"
`;
